# magic-float-linter

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-or-feature.md  false-positive.md  finding-report.md
.github/workflows/: ci.yml  release.yml
docs/: ai-ml-corpus-study.md  confidence-calibration.md  corpus-study.md  false-positive-audit-100.md  false-positive-audit.md  scientific-corpus-study.md
scripts/: calibration_sweep.py  corpus_study.py
src/exact_linter/: __init__.py  baseline.py  cli.py  confidence.py  config.py  constants.py  extract.py  fix.py  flake8_plugin.py  gitutil.py  idioms.py  recognize.py  report.py  sarif.py  sequences.py  triage.py
tests/: test_baseline.py  test_changed_only.py  test_cli.py  test_codes.py  test_config.py  test_constants.py  test_domain_packs.py  test_extract.py  test_fix.py  test_flake8_plugin.py  test_folding.py  test_gitutil.py  test_historical_constants.py  test_identify.py  test_idioms.py  test_near_miss.py  test_recognize.py  test_sarif.py  test_sequences.py  test_sequences_cli.py  test_triage.py  test_truncation.py  test_version.py
